objects/DMAPP__Insight_High_Yield_Question_Persona__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Dealmaker ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Insight_High_Yield_Question__c</fullName>
        <label>Insight High Yield Question</label>
        <referenceTo>DMAPP__Insight_High_Yield_Question__c</referenceTo>
        <relationshipName>Insight_High_Yield_Question_Personas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Insight_Persona__c</fullName>
        <label>Insight Persona</label>
        <referenceTo>DMAPP__Insight_Persona__c</referenceTo>
        <relationshipName>Insight_High_Yield_Question_Personas</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>HYQ Persona</label>
    <nameField>
        <displayFormat>IHYQP-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HYQ Personas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DMAPP__Prevent_Field_Update</fullName>
        <active>true</active>
        <description>Prevents users updating the Field</description>
        <errorConditionFormula>ISCHANGED(DMAPP__DealmakerID__c)</errorConditionFormula>
        <errorDisplayField>DMAPP__DealmakerID__c</errorDisplayField>
        <errorMessage>The Dealmaker ID field cannot be updated after creation</errorMessage>
    </validationRules>
</CustomObject>